--- a/VkOnline/src/main/AndroidManifest.xml
+++ b/VkOnline/src/main/AndroidManifest.xml
@@ -15,6 +15,11 @@
 		android:enabled="true" 
 		android:exported="true"> 
 		</service>
+		<service
+			android:name=".MyServices"
+			android:enabled="true" 
+			android:exported="true"> 
+		</service>
         <activity
             android:name=".LoginActivity"
             android:windowSoftInputMode="adjustResize">
